# fastapi-aiogram-template

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/bot/handlers/: main.py
app/core/: config.py
app/db/: models.py
readme/: aerich.md
